--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-core": "^6.26.3",
     "gh-pages": "^3.2.3",
     "highlight.js": "^11.2.0",
+    "html-react-parser": "^1.2.8",
     "marked": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
